--- a/src/app/modules/main/content/components/clients/components/client-profile/client-profile.component.html
+++ b/src/app/modules/main/content/components/clients/components/client-profile/client-profile.component.html
@@ -6,7 +6,8 @@
         <!-- Title Content -->
         <div class="w-full flex justify-between items-center">
             <div class="w-fit font-bold flex items-center"><span class="text-blue-600 cursor-pointer uppercase hover:underline" [routerLink]="['../']">Clients</span> <span class="mx-2 font-bold text-3xl">&#xB7;</span> <span class="text-normal uppercase">View</span></div>
-            <div class="flex justify-end">
+            <div class="flex justify-end items-center">
+                <span class="w-fit px-2 uppercase text-xs rounded-full mr-2" [ngClass]="getStatusStyle(filterRequiredIds('client_status', clientDetails.clientStatus))">{{filterRequiredIds('client_status', clientDetails.clientStatus)}}</span>
                 <button mat-icon-button class="" [matMenuTriggerFor]="clientProfileMenu">
                     <mat-icon class="text-base">more_vert</mat-icon>
                 </button>
@@ -30,11 +31,13 @@
 
         <!-- Client Logo -->
         <div class="w-full flex mt-4">
-            <div class="p-4 bg-blue-500 font-bold text-white rounded-md border-4 border-gray-200">CN</div>
+            <div class="p-4 bg-blue-500 font-bold text-white rounded-md border-4 border-gray-200 uppercase">{{clientDetails.clientName[0] + clientDetails.clientName[1]}}</div>
         </div>
 
         <!-- Client Name -->
-        <div class="text-xl mt-2">{{clientDetails.clientName}}</div>
+        <div class="mt-2 flex items-center">
+            <span class="text-2xl mr-2">{{clientDetails.clientName}}</span>
+        </div>
 
         <!-- Client About -->
         <div class="w-full mt-4">
@@ -53,7 +56,7 @@
         <div class="w-full my-8">
             <div class="uppercase text-gray-600 text-xs">Location & Website</div>
             <div class="mt-2 text-xs flex items-center">
-                <mat-icon class="text-gray-400 text-base">location_on</mat-icon> Bangalore, Karnataka
+                <mat-icon class="text-gray-400 text-base">location_on</mat-icon> {{clientDetails.clientCity}}, {{clientDetails.clientState}}, {{clientDetails.clientCountry}}
             </div>
             <div class="mt-2 text-xs flex items-center">
                 <mat-icon class="text-gray-400 text-base">language</mat-icon> {{clientDetails.clientWebsite}}
@@ -69,9 +72,9 @@
         <div class="w-full my-8">
             <div class="uppercase text-gray-600 text-xs">Client Members</div>
             <div class="w-full mt-2 flex flex-wrap">
-                <div class="mb-2 mr-2" *ngFor="let name of ['Akshay Kumar', 'Sachin G', 'Karthik Sharma', 'Chandra H']">
-                    <div class="w-fit flex items-center text-xs border border-gray-300 rounded-full p-1 pr-2 cursor-pointer hover:text-blue-600 hover:border-blue-600" >
-                        <span class="uppercase p-1 px-2 rounded-full bg-gray-200 mr-2 text-xs font-bold">{{name[0]}}</span> {{name}}
+                <div class="mb-2 mr-2" *ngFor="let member of clientDetails.clientMembers">
+                    <div class="w-fit flex items-center text-xs border border-gray-300 rounded-full p-1 pr-2 cursor-pointer hover:text-blue-600 hover:border-blue-600" [routerLink]="['../../admin/members', member]">
+                        <span class="uppercase p-1 px-2 rounded-full bg-gray-200 mr-2 text-xs font-bold">{{filterRequiredIds('teamMember', member)[0]}}</span> {{filterRequiredIds('teamMember', member)}}
                     </div>
                 </div>
             </div>
@@ -102,7 +105,7 @@
 
                 <!-- Projects Tab -->
                 <mat-tab label="Projects">
-                    <div class="w-full p-2 border-t border-gray-200">
+                    <div class="w-full p-4 border-t border-gray-200">
                         <div class="w-full border border-gray-200 rounded-md" *ngIf="projectsList?.length">
                             <div class="w-full flex text-xs font-bold justify-between items-center px-4 py-2 rounded-t-md border-b border-gray-100 bg-gray-50 text-gray-600">
                                 <div class="w-4/12">Project Name</div>
