Project Creation page updates, Minor UI bug fixes.

--- a/src/app/modules/main/content/components/clients/components/client-profile/client-profile.component.html
+++ b/src/app/modules/main/content/components/clients/components/client-profile/client-profile.component.html
@@ -308,7 +308,7 @@
                             </div>
                         </div>
 
-                        <!-- If no projects created under client -->
+                        <!-- If no releases created under client -->
                         <div class="w-full py-14" *ngIf="!releasesList?.length">
                             <div class="text-gray-600 text-center">No releases available for {{clientDetails.clientName}}.</div>
                             <div class="mt-4 flex justify-center">
