--- a/src/app/modules/main/content/components/projects/components/project-create-edit/project-create-edit.component.html
+++ b/src/app/modules/main/content/components/projects/components/project-create-edit/project-create-edit.component.html
@@ -126,8 +126,8 @@
 
                     <!-- Action Buttons -->
                     <div class="w-full flex justify-end p-6">
-                        <button mat-button class="">Cancel</button>
-                        <button mat-flat-button class="bg-blue-500 text-white" style="margin-left: 3%;" (click)="submitProjectDetails()">Create Project</button>
+                        <button mat-stroked-button class="">Cancel</button>
+                        <button mat-flat-button class="bg-blue-500 text-white ml-6" color="primary" (click)="submitProjectDetails()">Create Project</button>
                     </div>
                 </form>
                 
