--- a/src/app/modules/main/content/components/clients/components/client-profile/client-profile.component.html
+++ b/src/app/modules/main/content/components/clients/components/client-profile/client-profile.component.html
@@ -1,7 +1,7 @@
 <div class="w-full h-screen flex border-b border-gray-200">
 
     <!-- Basic details block -->
-    <div class="w-4/12 h-full border-r border-gray-200 py-4 pr-6 pl-8">
+    <div class="w-4/12 h-full border-r border-gray-200 py-4 pr-6 pl-8" *ngIf="clientDetails">
 
         <!-- Title Content -->
         <div class="w-full flex justify-between items-center">
@@ -84,7 +84,7 @@
     </div>
 
     <!-- Advanced details block -->
-    <div class="w-8/12 h-full">
+    <div class="w-8/12 h-full" *ngIf="clientDetails">
 
         <!-- Header -->
         <div class="w-full p-4 flex justify-between items-center">
@@ -413,6 +413,14 @@
                     </div>
                 </mat-tab>
             </mat-tab-group>
+        </div>
+    </div>
+
+    <!-- Loader -->
+    <div class="w-full flex justify-center py-28" *ngIf="!clientDetails">
+        <div class="flex">
+            <span class="mr-2">Fetching Client Details. Please Wait ...</span>
+            <mat-spinner [diameter]="20"></mat-spinner>
         </div>
     </div>
 </div>
