Client profile minor UI fixes.

--- a/src/app/modules/main/content/components/clients/clients.component.html
+++ b/src/app/modules/main/content/components/clients/clients.component.html
@@ -22,7 +22,7 @@
                     <div class="w-full p-4">
                       <!-- Status Block -->
                       <div class="w-full flex justify-start">
-                        <span class="text-right text-xs px-3 rounded-full" [ngClass]="getStatusStyle(client.clientStatus)">{{client.clientStatus}}</span>
+                        <span class="text-right text-xs px-3 rounded-full uppercase" [ngClass]="getStatusStyle(client.clientStatus)">{{client.clientStatus}}</span>
                       </div>
 
                       <!-- Card Content -->
